[gd_scene load_steps=11 format=2]

[ext_resource path="res://source/assets/sprites/GUI/background_lobby.svg" type="Texture" id=1]
[ext_resource path="res://source/fonts/oxygen/Oxygen-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://source/fonts/oxygen/Oxygen-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://source/scenes/OVERLAY/elements/floor.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/scenes/OVERLAY/elements/button.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/assets/scripts/ui_element_handlers/UI.gd" type="Script" id=6]
[ext_resource path="res://source/fonts/oxygen/oxygen_regular.tres" type="DynamicFont" id=7]
[ext_resource path="res://source/assets/scripts/ui_element_handlers/lobby.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 88
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="lobby" type="Node2D"]
script = ExtResource( 8 )

[node name="background" type="Node2D" parent="."]

[node name="background_lobby" type="Sprite" parent="background"]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="background/background_lobby"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -540.0
margin_right = -960.0
margin_bottom = -540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="device_ip_address" type="Label" parent="background/background_lobby/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -319.0
margin_top = -56.0
margin_right = 319.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.439216, 0.666667, 1, 0.27451 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="background/background_lobby/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = 60.0
margin_right = 116.5
margin_bottom = 89.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.439216, 0.666667, 1, 0.27451 )
text = "WAITING FOR PLAYERS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="floor" parent="background" instance=ExtResource( 4 )]
position = Vector2( 960, 1016 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="start_game" parent="UI" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 100.0
margin_right = 150.0
margin_bottom = 172.0

[node name="Label" type="Label" parent="UI/start_game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = -32.0
margin_right = 74.5
margin_bottom = 32.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "START"
align = 1
valign = 1

[node name="spawn_locations" type="Node" parent="."]

[node name="1" type="Position2D" parent="spawn_locations"]
position = Vector2( 384, 860 )

[node name="2" type="Position2D" parent="spawn_locations"]
position = Vector2( 768, 860 )

[node name="3" type="Position2D" parent="spawn_locations"]
position = Vector2( 1152, 860 )

[node name="4" type="Position2D" parent="spawn_locations"]
position = Vector2( 1536, 860 )

[connection signal="pressed" from="UI/start_game" to="." method="_on_start_game_pressed"]
